--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="GcMTdDBWQcgM9VImdqyknsvxZNCnO5_zkua-BuxRlRA" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Internships24 | Find Verified Internships & Learnerships in South Africa</title>
