google-adsense-account

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta name="google-site-verification" content="GcMTdDBWQcgM9VImdqyknsvxZNCnO5_zkua-BuxRlRA" />
+    <meta name="google-adsense-account" content="ca-pub-1984481987636072">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Internships24 | Find Verified Internships & Learnerships in South Africa</title>
@@ -24,6 +25,7 @@
 
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
+    
   </head>
 
   <body>
