--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="google-adsense-account" content="ca-pub-1984481987636072">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Internships24 | Find Verified Internships & Learnerships in South Africa</title>
+    <title>Internships24 | Latest 2026 / 2027 Internships & Learnerships in South Africa</title>
     <meta name="description" content="Discover internships, learnerships, graduate programmes, and bursaries in South Africa. Free access to verified career opportunities for graduates and students." />
     <meta name="author" content="Internships24" />
     <meta name="keywords" content="internships South Africa, learnerships, graduate programmes, bursaries, jobs for graduates, career opportunities, TVET learnerships" />
     <link rel="canonical" href="https://internships24.co.za" />
 
-    <meta property="og:title" content="Internships24 | Find Verified Internships & Learnerships in South Africa" />
+    <meta property="og:title" content="Internships24 | Latest 2026 / 2027 Internships & Learnerships in South Africa" />
     <meta property="og:description" content="Discover internships, learnerships, graduate programmes, and bursaries in South Africa. Free access to verified career opportunities." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://internships24.co.za" />
@@ -19,7 +19,7 @@
     <meta property="og:locale" content="en_ZA" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Internships24 | Find Verified Internships & Learnerships in South Africa" />
+    <meta name="twitter:title" content="Internships24 | Latest 2026 / 2027 Internships & Learnerships in South Africa" />
     <meta name="twitter:description" content="Discover internships, learnerships, graduate programmes, and bursaries in South Africa." />
     <meta name="twitter:image" content="https://internships24.co.za/og-image.png" />
 
