Fix SPA routing for Google indexing

--- a/index.html
+++ b/index.html
@@ -1,31 +1,52 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-ZA">
   <head>
+    <!-- Verification -->
     <meta name="google-site-verification" content="GcMTdDBWQcgM9VImdqyknsvxZNCnO5_zkua-BuxRlRA" />
-    <meta name="google-adsense-account" content="ca-pub-1984481987636072">
+    <meta name="google-adsense-account" content="ca-pub-1984481987636072" />
+
+    <!-- Core -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Internships24 | Latest 2026 / 2027 Internships & Learnerships in South Africa</title>
-    <meta name="description" content="Discover internships, learnerships, graduate programmes, and bursaries in South Africa. Free access to verified career opportunities for graduates and students." />
+
+    <!-- SEO Title -->
+    <title>2026 / 2027 Internships & Learnerships in South Africa | Internships24</title>
+
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="Find the latest 2026 / 2027 internships, learnerships, graduate programmes, and bursaries in South Africa. Free access to verified career opportunities for students and graduates."
+    />
+
     <meta name="author" content="Internships24" />
-    <meta name="keywords" content="internships South Africa, learnerships, graduate programmes, bursaries, jobs for graduates, career opportunities, TVET learnerships" />
-    <link rel="canonical" href="https://internships24.co.za" />
 
-    <meta property="og:title" content="Internships24 | Latest 2026 / 2027 Internships & Learnerships in South Africa" />
-    <meta property="og:description" content="Discover internships, learnerships, graduate programmes, and bursaries in South Africa. Free access to verified career opportunities." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://internships24.co.za" />
-    <meta property="og:image" content="https://internships24.co.za/og-image.png" />
-    <meta property="og:locale" content="en_ZA" />
+    <!-- Canonical (VERY IMPORTANT) -->
+    <link rel="canonical" href="https://www.internships24.co.za/" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Internships24 | Latest 2026 / 2027 Internships & Learnerships in South Africa" />
-    <meta name="twitter:description" content="Discover internships, learnerships, graduate programmes, and bursaries in South Africa." />
-    <meta name="twitter:image" content="https://internships24.co.za/og-image.png" />
-
+    <!-- Robots -->
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
-    
+
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="Internships24" />
+    <meta property="og:title" content="2026 / 2027 Internships & Learnerships in South Africa" />
+    <meta
+      property="og:description"
+      content="Discover verified internships, learnerships, graduate programmes, and bursaries across South Africa."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.internships24.co.za/" />
+    <meta property="og:image" content="https://www.internships24.co.za/og-image.png" />
+    <meta property="og:locale" content="en_ZA" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="2026 / 2027 Internships & Learnerships in South Africa" />
+    <meta
+      name="twitter:description"
+      content="Find internships, learnerships, graduate programmes, and bursaries in South Africa."
+    />
+    <meta name="twitter:image" content="https://www.internships24.co.za/og-image.png" />
   </head>
 
   <body>
